examples/test/testpolicy16171.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16171
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key27: value41
      key22: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value4
      podSelector:
        matchLabels:
          key26: value37
          key6: value27
